--- a/Client/roostadmin/package.json
+++ b/Client/roostadmin/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
